ipc/ipdl/test/ipdl/error/BadNestedManagee.ipdl
include protocol BadNestedManager;

nested(upto inside_sync) async protocol BadNestedManagee {
    manager BadNestedManager;
child:
    async __delete__();
};
